# DesignPatterns

./: CMakeLists.txt  README.md  main.cpp
include/: builder.hpp  factory.hpp  head.h  prototype.hpp  proxy.hpp  singleton.hpp
include/Behavior/: command.hpp  iterator.hpp  memento.hpp  observer.hpp  responsibility.hpp  state.hpp  strategy.hpp  template.hpp  visitor.hpp
include/Behavioral/: interpreter.hpp  mediator.hpp  memento.hpp  responsibility.hpp  strategy.hpp  visitor.hpp
include/Creational/: builder.hpp  factory.hpp  prototype.hpp  singleton.hpp
include/Structural/: adapter.hpp  bridge.hpp  composite.hpp  decorator.hpp  facade.hpp  flyweight.hpp  proxy.hpp
